--- a/css/risc.css
+++ b/css/risc.css
@@ -164,7 +164,7 @@ light-gray: b3b3b3
    height: 16px;
    text-align: center;
    vertical-align: middle;
-   cursor: hand;
+   cursor: hand;cursor: pointer;
    float: left;
 }
 .calc-operation-selected{
@@ -183,7 +183,7 @@ light-gray: b3b3b3
    text-align: center;
    vertical-align: middle;
    margin: 0px;
-   cursor: hand;
+   cursor: hand;cursor: pointer;
    border: solid 1px #0076FF;
 }
 .calc-input-incr{
@@ -194,7 +194,7 @@ light-gray: b3b3b3
     display: inline-block;
     text-align: center;
     vertical-align: middle;
-    cursor: hand;
+    cursor: hand;cursor: pointer;
     margin: 0px;
     border: solid 1px #0076FF;
 }
