--- a/css/risc.css
+++ b/css/risc.css
@@ -158,20 +158,32 @@ light-gray: b3b3b3
 
 .calc-operation{
    border: solid 1px #3b3b3b;
-   background: #b3b3b3;
-   color: #3b3b3b;
+   background: #3b3b3b;
+   color: #b3b3b3;
    width: 16px;
    height: 16px;
    text-align: center;
    vertical-align: middle;
    cursor: hand;cursor: pointer;
    float: left;
+   
+   -moz-box-shadow: inset 0 0 3px 3px #b3b3b3;
+   -webkit-box-shadow: inset 0 0 3px 3px#b3b3b3;
+   box-shadow: inset 0 0 3px 3px #b3b3b3;
+   
 }
 .calc-operation-selected{
-   background: #FFC500;
+   background: #FFC500;/*#FFC500;*/
+   color: #000;
+   -moz-box-shadow: inset 0 0 3px 3px #b3b3b3;
+   -webkit-box-shadow: inset 0 0 3px 3px #b3b3b3;
+   box-shadow: inset 0 0 3px 3px #b3b3b3;
 }
 .calc-operation-hover{
    border: solid 1px #0076FF;
+   -moz-box-shadow: inset 0 0 3px 3px #0076FF;
+   -webkit-box-shadow: inset 0 0 3px 3px #0076FF;
+   box-shadow: inset 0 0 3px 3px #0076FF;
 }
 
 .calc-input-decr{
