--- a/css/arm7.css
+++ b/css/arm7.css
@@ -10,23 +10,48 @@ body{
    background: #000;
    border-bottom: solid 1px #3b3b3b;
    box-shadow: 0px 4px 10px rgba(0,0,0,0.4);
+   height: 48px;
 }
 
 .page-title{
    font-size: 1.2em;
    font-weight: bold;
    padding: 10px;
+   display: inline-block;
    
 }
 
 .page-header .page-title{
    color: #FFC500;
-
 }
 .page-content{
    overflow-y: auto;
+   height: 100%;
+   margin-top: 48px;
 }
 
+
+.page-actions{
+   float: right;
+}
+
+.page-action{
+   display: inline-block;
+}
+
+.action-title{
+   color: #0076FF;
+   font-size: 0.9em;
+   display: inline-block;
+}
+.action-icon{
+   /* TODO: background image with sprite*/
+   border-left: solid 1px #0076FF;
+   color: #0076FF;
+   width: 16px;
+   height: 16px;
+   display: inline-block;
+}
 
 .popup-wrapper{
    position: absolute;
